--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/recoilize": "^0.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "recoil": "^0.1.2",
+    "recoilize": "^1.0.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
